include_ver_2_beta_2/freetype.h

  
  typedef int  FT_Int;
  typedef unsigned int  FT_UInt;
  typedef signed long  FT_Long;
  typedef unsigned long  FT_ULong;
  typedef signed long  FT_F26Dot6;
  typedef int  FT_Error;
  typedef struct  FT_BBox_
  {
    FT_Pos  xMin, yMin;
    FT_Pos  xMax, yMax;
  } FT_BBox;
  typedef struct FT_LibraryRec_  *FT_Library;
  typedef struct FT_FaceRec_*  FT_Face;
  typedef struct FT_SizeRec_*  FT_Size;
  typedef struct FT_GlyphSlotRec_*  FT_GlyphSlot;
  typedef struct  FT_FaceRec_
  {
    FT_Driver        driver;
    FT_Memory        memory;
    FT_Stream        stream;
    FT_Long          num_faces;
    FT_Long          face_index;
    FT_Generic       generic;
    FT_GlyphSlot     glyph;
    FT_Size          size;
    FT_CharMap       charmap;
    FT_Int           num_charmaps;
    FT_CharMap*      charmaps;
    FT_ListRec       sizes_list;
    void*            extensions;
    FT_Long          face_flags;
    FT_Long          style_flags;
    FT_Long          num_glyphs;
    FT_String*       family_name;
    FT_String*       style_name;
    FT_Int           num_fixed_sizes;
    FT_Bitmap_Size*  available_sizes;
    FT_BBox          bbox;
    FT_UShort        units_per_EM;
    FT_Short         ascender;
    FT_Short         descender;
    FT_Short         height;
    FT_Short         max_advance_width;
    FT_Short         max_advance_height;
    FT_Short         underline_position;
    FT_Short         underline_thickness;
    FT_UShort        max_points;
    FT_Short         max_contours;
  } FT_FaceRec;
  typedef struct  FT_SizeRec_
  {
    FT_Face          face;      
    FT_Generic       generic;   
    FT_Size_Metrics  metrics;   
  } FT_SizeRec;
  typedef struct  FT_GlyphSlotRec_
  {
    FT_Face           face;
    FT_GlyphSlot      next;
    FT_Glyph_Metrics  metrics;
    FT_Glyph_Metrics  metrics2;
    FT_Glyph_Tag      format;
    FT_Bitmap         bitmap;
    FT_Outline        outline;
    FT_Int            num_subglyphs;
    FT_Int            max_subglyphs;
    FT_SubGlyph*      subglyphs;
    void*             control_data;
    void*             control_len;
    void*             other;
  } FT_GlyphSlotRec;
  EXPORT_DEF
  FT_Error  FT_Init_FreeType( FT_Library*  library );
  EXPORT_DEF
  FT_Error  FT_Done_FreeType( FT_Library  library );
  EXPORT_DEF
  FT_Error  FT_New_Face( FT_Library   library,
                         const char*  filepathname,
                         FT_Long      face_index,
                         FT_Face*     face );
  EXPORT_DEF
  FT_Error  FT_Open_Face( FT_Library  library,
                          FT_Stream   stream,
                          FT_Long     face_index,
                          FT_Face*    face );
  EXPORT_DEF
  FT_Error  FT_New_Memory_Face( FT_Library  library,
                                void*       file_base,
                                FT_Long     file_size,
                                FT_Long     face_index,
                                FT_Face    *face );
  EXPORT_DEF
  FT_Error  FT_Done_Face( FT_Face  face );
  EXPORT_DEF
  FT_Error  FT_New_Size( FT_Face   face,
                         FT_Size*  size );
  EXPORT_DEF
  FT_Error  FT_Done_Size( FT_Size  size );
  EXPORT_DEF
  FT_Error  FT_Set_Char_Size( FT_Face     face,
                              FT_F26Dot6  char_width,
                              FT_F26Dot6  char_height,
                              FT_UInt     horz_resolution,
                              FT_UInt     vert_resolution );
  EXPORT_DEF
  FT_Error  FT_Set_Pixel_Sizes( FT_Face    face,
                                FT_UInt    pixel_width,
                                FT_UInt    pixel_height );
  EXPORT_DEF
  FT_Error  FT_New_GlyphSlot( FT_Face        face,
                              FT_GlyphSlot*  aslot );
  EXPORT_DEF
  void  FT_Done_GlyphSlot( FT_GlyphSlot  slot );
  EXPORT_DEF
  FT_Error  FT_Load_Glyph( FT_Face  face,
                           FT_UInt  glyph_index,
                           FT_Int   load_flags );
  EXPORT_DEF
  FT_Error  FT_Load_Char( FT_Face   face,
                          FT_ULong  char_code,
                          FT_Int    load_flags );
  EXPORT_DEF
  FT_Error  FT_Get_Glyph_Bitmap( FT_Face     face,
                                 FT_Bitmap*  map );
  EXPORT_DEF
  FT_Error  FT_Get_Kerning( FT_Face     face,
                            FT_UInt     left_glyph,
                            FT_UInt     right_glyph,
                            FT_Vector*  kerning );
  EXPORT_DEF
  FT_UInt  FT_Get_Char_Index( FT_Face   face,
                              FT_ULong  charcode );
  EXPORT_DEF
  FT_Long  FT_MulDiv( FT_Long  a,
                      FT_Long  b,
                      FT_Long  c );
  EXPORT_DEF
  FT_Long  FT_MulFix( FT_Long  a,
                      FT_Long  b );
  EXPORT_DEF
  FT_Long  FT_DivFix( FT_Long  a,
                      FT_Long  b );
  EXPORT_DEF
  int  FT_Decompose_Outline( FT_Outline*        outline,
                             FT_Outline_Funcs*  interface,
                             void*              user );
  EXPORT_DEF
  FT_Error  FT_New_Outline( FT_Library   library,
                            FT_UInt      numPoints,
                            FT_Int       numContours,
                            FT_Outline*  outline );
  EXPORT_DEF
  FT_Error  FT_Done_Outline( FT_Library   library,
                             FT_Outline*  outline );
  EXPORT_DEF
  FT_Error  FT_Get_Outline_CBox( FT_Outline*  outline,
                                 FT_BBox*     cbox );
  EXPORT_DEF
  void  FT_Translate_Outline( FT_Outline*  outline,
                              FT_Pos       xOffset,
                              FT_Pos       yOffset );