include_ver_2_beta_2/ftimage.h

  
  typedef signed long  FT_Pos;
  typedef struct  FT_Vector_
  {
    FT_Pos  x;
    FT_Pos  y;
  } FT_Vector;
  typedef struct FT_Bitmap_
  {
    int    rows;
    int    width;
    int    pitch;
    void*  buffer;
    short  num_grays;
    char   pixel_mode;
    char   palette_mode;
    void*  palette;
  } FT_Bitmap;
  typedef struct  FT_Outline_
  {
    short       n_contours;      
    short       n_points;        
    FT_Vector*  points;          
    char*       flags;           
    short*      contours;        
    char        owner;           
    char        high_precision;  
    char        second_pass;     
    char        dropout_mode;    
  } FT_Outline;
  typedef int  (*FT_Outline_MoveTo_Func)( FT_Vector*  to,
                                          void*       user );
  typedef int  (*FT_Outline_LineTo_Func)( FT_Vector*  to,
                                          void*       user );
  typedef int  (*FT_Outline_ConicTo_Func)( FT_Vector*  control,
                                           FT_Vector*  to,
                                           void*       user );
  typedef int  (*FT_Outline_CubicTo_Func)( FT_Vector*  control1,
                                           FT_Vector*  control2,
                                           FT_Vector*  to,
                                           void*       user );
  typedef struct  FT_Outline_Funcs_
  {
    FT_Outline_MoveTo_Func   move_to;
    FT_Outline_LineTo_Func   line_to;
    FT_Outline_ConicTo_Func  conic_to;
    FT_Outline_CubicTo_Func  cubic_to;
  } FT_Outline_Funcs;