include_ver_2_beta_2/ftsystem.h

  typedef struct FT_StreamRec_*  FT_Stream;
  struct FT_StreamRec_
  {
    char*           base;
    unsigned long   size;
    unsigned long   pos;
    FT_StreamDesc   descriptor;
    FT_StreamDesc   pathname;    
    FT_Stream_IO    read;
    FT_Stream_Close close;
    FT_Memory       memory;
    char*           cursor;
    char*           limit;
  };