lib/src/generated_bindings2.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// /
  /// /*************************************************************************/
  /// /
  int FT_Init_FreeType(
    ffi.Pointer<FT_Library> library1,
  ) {
    return _FT_Init_FreeType(
      library1,
    );
  }

  late final _FT_Init_FreeTypePtr =
      _lookup<ffi.NativeFunction<FT_Error Function(ffi.Pointer<FT_Library>)>>(
          'FT_Init_FreeType');
  late final _FT_Init_FreeType =
      _FT_Init_FreeTypePtr.asFunction<int Function(ffi.Pointer<FT_Library>)>();

  /// /
  int FT_Done_FreeType(
    FT_Library library1,
  ) {
    return _FT_Done_FreeType(
      library1,
    );
  }

  late final _FT_Done_FreeTypePtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Library)>>(
          'FT_Done_FreeType');
  late final _FT_Done_FreeType =
      _FT_Done_FreeTypePtr.asFunction<int Function(FT_Library)>();

  /// /
  int FT_New_Face(
    FT_Library library1,
    ffi.Pointer<ffi.Char> filepathname,
    int face_index,
    ffi.Pointer<FT_Face> face,
  ) {
    return _FT_New_Face(
      library1,
      filepathname,
      face_index,
      face,
    );
  }

  late final _FT_New_FacePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Library, ffi.Pointer<ffi.Char>, FT_Long,
              ffi.Pointer<FT_Face>)>>('FT_New_Face');
  late final _FT_New_Face = _FT_New_FacePtr.asFunction<
      int Function(
          FT_Library, ffi.Pointer<ffi.Char>, int, ffi.Pointer<FT_Face>)>();

  int FT_Open_Face(
    FT_Library library1,
    FT_Stream stream,
    int face_index,
    ffi.Pointer<FT_Face> face,
  ) {
    return _FT_Open_Face(
      library1,
      stream,
      face_index,
      face,
    );
  }

  late final _FT_Open_FacePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Library, FT_Stream, FT_Long,
              ffi.Pointer<FT_Face>)>>('FT_Open_Face');
  late final _FT_Open_Face = _FT_Open_FacePtr.asFunction<
      int Function(FT_Library, FT_Stream, int, ffi.Pointer<FT_Face>)>();

  int FT_New_Memory_Face(
    FT_Library library1,
    ffi.Pointer<ffi.Void> file_base,
    int file_size,
    int face_index,
    ffi.Pointer<FT_Face> face,
  ) {
    return _FT_New_Memory_Face(
      library1,
      file_base,
      file_size,
      face_index,
      face,
    );
  }

  late final _FT_New_Memory_FacePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Library, ffi.Pointer<ffi.Void>, FT_Long, FT_Long,
              ffi.Pointer<FT_Face>)>>('FT_New_Memory_Face');
  late final _FT_New_Memory_Face = _FT_New_Memory_FacePtr.asFunction<
      int Function(
          FT_Library, ffi.Pointer<ffi.Void>, int, int, ffi.Pointer<FT_Face>)>();

  /// /
  int FT_Done_Face(
    FT_Face face,
  ) {
    return _FT_Done_Face(
      face,
    );
  }

  late final _FT_Done_FacePtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Face)>>('FT_Done_Face');
  late final _FT_Done_Face =
      _FT_Done_FacePtr.asFunction<int Function(FT_Face)>();

  /// /
  int FT_New_Size(
    FT_Face face,
    ffi.Pointer<FT_Size> size,
  ) {
    return _FT_New_Size(
      face,
      size,
    );
  }

  late final _FT_New_SizePtr = _lookup<
          ffi.NativeFunction<FT_Error Function(FT_Face, ffi.Pointer<FT_Size>)>>(
      'FT_New_Size');
  late final _FT_New_Size =
      _FT_New_SizePtr.asFunction<int Function(FT_Face, ffi.Pointer<FT_Size>)>();

  /// /
  int FT_Done_Size(
    FT_Size size,
  ) {
    return _FT_Done_Size(
      size,
    );
  }

  late final _FT_Done_SizePtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Size)>>('FT_Done_Size');
  late final _FT_Done_Size =
      _FT_Done_SizePtr.asFunction<int Function(FT_Size)>();

  /// /
  int FT_Set_Char_Size(
    FT_Face face,
    int char_width,
    int char_height,
    int horz_resolution,
    int vert_resolution,
  ) {
    return _FT_Set_Char_Size(
      face,
      char_width,
      char_height,
      horz_resolution,
      vert_resolution,
    );
  }

  late final _FT_Set_Char_SizePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Face, FT_F26Dot6, FT_F26Dot6, FT_UInt,
              FT_UInt)>>('FT_Set_Char_Size');
  late final _FT_Set_Char_Size = _FT_Set_Char_SizePtr.asFunction<
      int Function(FT_Face, int, int, int, int)>();

  /// /
  int FT_Set_Pixel_Sizes(
    FT_Face face,
    int pixel_width,
    int pixel_height,
  ) {
    return _FT_Set_Pixel_Sizes(
      face,
      pixel_width,
      pixel_height,
    );
  }

  late final _FT_Set_Pixel_SizesPtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Face, FT_UInt, FT_UInt)>>(
          'FT_Set_Pixel_Sizes');
  late final _FT_Set_Pixel_Sizes =
      _FT_Set_Pixel_SizesPtr.asFunction<int Function(FT_Face, int, int)>();

  /// /
  int FT_New_GlyphSlot(
    FT_Face face,
    ffi.Pointer<FT_GlyphSlot> aslot,
  ) {
    return _FT_New_GlyphSlot(
      face,
      aslot,
    );
  }

  late final _FT_New_GlyphSlotPtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(
              FT_Face, ffi.Pointer<FT_GlyphSlot>)>>('FT_New_GlyphSlot');
  late final _FT_New_GlyphSlot = _FT_New_GlyphSlotPtr.asFunction<
      int Function(FT_Face, ffi.Pointer<FT_GlyphSlot>)>();

  /// /
  void FT_Done_GlyphSlot(
    FT_GlyphSlot slot,
  ) {
    return _FT_Done_GlyphSlot(
      slot,
    );
  }

  late final _FT_Done_GlyphSlotPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(FT_GlyphSlot)>>(
          'FT_Done_GlyphSlot');
  late final _FT_Done_GlyphSlot =
      _FT_Done_GlyphSlotPtr.asFunction<void Function(FT_GlyphSlot)>();

  /// /
  int FT_Load_Glyph(
    FT_Face face,
    int glyph_index,
    int load_flags,
  ) {
    return _FT_Load_Glyph(
      face,
      glyph_index,
      load_flags,
    );
  }

  late final _FT_Load_GlyphPtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Face, FT_UInt, FT_Int)>>(
          'FT_Load_Glyph');
  late final _FT_Load_Glyph =
      _FT_Load_GlyphPtr.asFunction<int Function(FT_Face, int, int)>();

  /// /
  int FT_Load_Char(
    FT_Face face,
    int char_code,
    int load_flags,
  ) {
    return _FT_Load_Char(
      face,
      char_code,
      load_flags,
    );
  }

  late final _FT_Load_CharPtr =
      _lookup<ffi.NativeFunction<FT_Error Function(FT_Face, FT_ULong, FT_Int)>>(
          'FT_Load_Char');
  late final _FT_Load_Char =
      _FT_Load_CharPtr.asFunction<int Function(FT_Face, int, int)>();

  /// /
  int FT_Get_Glyph_Bitmap(
    FT_Face face,
    ffi.Pointer<FT_Bitmap> map,
  ) {
    return _FT_Get_Glyph_Bitmap(
      face,
      map,
    );
  }

  late final _FT_Get_Glyph_BitmapPtr = _lookup<
          ffi
          .NativeFunction<FT_Error Function(FT_Face, ffi.Pointer<FT_Bitmap>)>>(
      'FT_Get_Glyph_Bitmap');
  late final _FT_Get_Glyph_Bitmap = _FT_Get_Glyph_BitmapPtr.asFunction<
      int Function(FT_Face, ffi.Pointer<FT_Bitmap>)>();

  /// /
  int FT_Get_Kerning(
    FT_Face face,
    int left_glyph,
    int right_glyph,
    ffi.Pointer<FT_Vector> kerning,
  ) {
    return _FT_Get_Kerning(
      face,
      left_glyph,
      right_glyph,
      kerning,
    );
  }

  late final _FT_Get_KerningPtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Face, FT_UInt, FT_UInt,
              ffi.Pointer<FT_Vector>)>>('FT_Get_Kerning');
  late final _FT_Get_Kerning = _FT_Get_KerningPtr.asFunction<
      int Function(FT_Face, int, int, ffi.Pointer<FT_Vector>)>();

  /// /
  int FT_Get_Char_Index(
    FT_Face face,
    int charcode,
  ) {
    return _FT_Get_Char_Index(
      face,
      charcode,
    );
  }

  late final _FT_Get_Char_IndexPtr =
      _lookup<ffi.NativeFunction<FT_UInt Function(FT_Face, FT_ULong)>>(
          'FT_Get_Char_Index');
  late final _FT_Get_Char_Index =
      _FT_Get_Char_IndexPtr.asFunction<int Function(FT_Face, int)>();

  /// /
  int FT_MulDiv(
    int a,
    int b,
    int c,
  ) {
    return _FT_MulDiv(
      a,
      b,
      c,
    );
  }

  late final _FT_MulDivPtr =
      _lookup<ffi.NativeFunction<FT_Long Function(FT_Long, FT_Long, FT_Long)>>(
          'FT_MulDiv');
  late final _FT_MulDiv =
      _FT_MulDivPtr.asFunction<int Function(int, int, int)>();

  int FT_MulFix(
    int a,
    int b,
  ) {
    return _FT_MulFix(
      a,
      b,
    );
  }

  late final _FT_MulFixPtr =
      _lookup<ffi.NativeFunction<FT_Long Function(FT_Long, FT_Long)>>(
          'FT_MulFix');
  late final _FT_MulFix = _FT_MulFixPtr.asFunction<int Function(int, int)>();

  /// /
  int FT_DivFix(
    int a,
    int b,
  ) {
    return _FT_DivFix(
      a,
      b,
    );
  }

  late final _FT_DivFixPtr =
      _lookup<ffi.NativeFunction<FT_Long Function(FT_Long, FT_Long)>>(
          'FT_DivFix');
  late final _FT_DivFix = _FT_DivFixPtr.asFunction<int Function(int, int)>();

  /// /
  int FT_Decompose_Outline(
    ffi.Pointer<FT_Outline> outline,
    ffi.Pointer<FT_Outline_Funcs> interface1,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _FT_Decompose_Outline(
      outline,
      interface1,
      user,
    );
  }

  late final _FT_Decompose_OutlinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<FT_Outline>,
              ffi.Pointer<FT_Outline_Funcs>,
              ffi.Pointer<ffi.Void>)>>('FT_Decompose_Outline');
  late final _FT_Decompose_Outline = _FT_Decompose_OutlinePtr.asFunction<
      int Function(ffi.Pointer<FT_Outline>, ffi.Pointer<FT_Outline_Funcs>,
          ffi.Pointer<ffi.Void>)>();

  /// /
  int FT_New_Outline(
    FT_Library library1,
    int numPoints,
    int numContours,
    ffi.Pointer<FT_Outline> outline,
  ) {
    return _FT_New_Outline(
      library1,
      numPoints,
      numContours,
      outline,
    );
  }

  late final _FT_New_OutlinePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Library, FT_UInt, FT_Int,
              ffi.Pointer<FT_Outline>)>>('FT_New_Outline');
  late final _FT_New_Outline = _FT_New_OutlinePtr.asFunction<
      int Function(FT_Library, int, int, ffi.Pointer<FT_Outline>)>();

  /// /
  int FT_Done_Outline(
    FT_Library library1,
    ffi.Pointer<FT_Outline> outline,
  ) {
    return _FT_Done_Outline(
      library1,
      outline,
    );
  }

  late final _FT_Done_OutlinePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(
              FT_Library, ffi.Pointer<FT_Outline>)>>('FT_Done_Outline');
  late final _FT_Done_Outline = _FT_Done_OutlinePtr.asFunction<
      int Function(FT_Library, ffi.Pointer<FT_Outline>)>();

  /// /
  int FT_Get_Outline_CBox(
    ffi.Pointer<FT_Outline> outline,
    ffi.Pointer<FT_BBox> cbox,
  ) {
    return _FT_Get_Outline_CBox(
      outline,
      cbox,
    );
  }

  late final _FT_Get_Outline_CBoxPtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(ffi.Pointer<FT_Outline>,
              ffi.Pointer<FT_BBox>)>>('FT_Get_Outline_CBox');
  late final _FT_Get_Outline_CBox = _FT_Get_Outline_CBoxPtr.asFunction<
      int Function(ffi.Pointer<FT_Outline>, ffi.Pointer<FT_BBox>)>();

  /// /
  void FT_Translate_Outline(
    ffi.Pointer<FT_Outline> outline,
    int xOffset,
    int yOffset,
  ) {
    return _FT_Translate_Outline(
      outline,
      xOffset,
      yOffset,
    );
  }
